account-widget: Hitting ENTER should also emit GtkDialog::response

If the widget is inside a GtkDialog, then clicking one of the response
buttons emits GtkDialog::response, as one would expect. However, just
hitting ENTER inside a GtkEntry doesn't. This is an awkward
inconsistency for applications using this widget.

From now on, when TpawAccountWidget is inside a GtkDialog, it will emit
GtkDialog::response followed by TpawAccountWidget::close when the
widget has finished adding the account.

Fall out from b838c54c673165a9d948b18f21580a0ca94f8cd5

https://bugzilla.gnome.org/show_bug.cgi?id=767295